login-form_part Tow_1

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,11 +35,13 @@ body {
   padding: 15px 0px;
   border: none;
   font-size: 18px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2); /* rgba : rgb+opacity 0.0~1.0 */
   margin-bottom: 25px;
-  transition: border-color 0.3s ease-in-out;
 }
 
+#login-form input:not([type="submit"]) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2); /* rgba : rgb+opacity 0.0~1.0 */
+  transition: border-color 0.3s ease-in-out;
+}
 #login-form input::placeholder {
   color: rgba(0, 0, 0, 0.4);
 }
